<resources>
    <string name="app_name">Trip Count</string>
    <string name="title_activity_group_list">My groups</string>
    <string name="title_activity_add_group">Add group</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Common -->
    <string name="currency">%1$s $</string>

    <!--Login -->
    <string name="login_toast_error_identification">An error occurred during your identification</string>
    <string name="login_connect">Connect</string>

    <!--Add group -->
    <string name="add_group_button">Create a new group</string>
    <string name="add_group_title">Group\'s name :</string>
    <string name="add_group_hint">Enter a group\'s name</string>
    <string name="add_group_toast_alert_no_name">Please enter a group\'s name</string>
    <string name="add_group_toast_alert_no_token">Please enter a group\'s token</string>
    <string name="add_token_title">Group\'s token :</string>
    <string name="add_token_hint">Enter a token</string>
    <string name="add_token_button">Join the group</string>
    <string name="group_not_found">Group not found.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Popin -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="error_http">An error has occurred. Please try again.</string>
    <string name="not_connect">Please connect to perform your action.</string>
    <string name="add_group_success">Add group success !</string>
    <string name="alert_message_enable_gps">GPS is disabled in your device. Enable it?</string>
    <string name="alert_action_positive_enable_gps">Enable GPS</string>

    <!-- GroupList -->

    <!-- Add spending -->
    <string name="add_spending_name_title">Spending :</string>
    <string name="add_spending_name_hint">Enter your spending\'s name</string>
    <string name="add_spending_cost_title">Cost :</string>
    <string name="add_spending_cost_hint">Enter the cost of this spending</string>
    <string name="add_spending_payer_title">Payer :</string>
    <string name="add_spending_payer_hint">Enter the payer of this spending</string>
    <string name="add_spending_participant_list_title">Participants :</string>
    <string name="add_spending_button">Add a new spending</string>
    <string name="add_spending_error_no_name">Please, enter a spending name</string>
    <string name="add_spending_error_no_cost">Please, enter the cost of your spending</string>
    <string name="add_spending_error_no_payer">Please, enter the payer of your spending</string>
    <string name="add_new_participant_hint">Enter a new person\'s name</string>
    <string name="add_new_participant_button">Done</string>
    <string name="add_new_payer_hint">If needed, enter a new payer\'s name</string>
    <string name="missing_purchaser_select">Error : select a purchaser.</string>
    <string name="missing_indebted_select">Error : Select participants.</string>
    <string name="add_spending_success">Add spending success.</string>

    <!-- GroupActivity -->
    <string name="fragment_title_tab_spending">Spending</string>
    <string name="fragment_title_tab_bilan">Bilan</string>
    <string name="fragment_title_tab_map">Map</string>
    <string name="purchaser">Purchaser :</string>
    <string name="price">Price :</string>
    <string name="share">Share</string>
    <string name="share_title_popin">Choice to share token with your friends :</string>
    <string name="message_token_is">The group\'s token is : %1$s</string>
    <string name="participants">Participants :</string>
    <string name="location">Localisation :</string>

    <!--bilanFragment -->
    <string name="bilan_title">Bilan of spendings </string>
    <string name="refunding_title">Refunding</string>
    <string name="nothing_in_spending">No spendings</string>
    <string name="nothing_in_group">No groups</string>
    <string name="item_refunding_arrow">-></string>
</resources>
