<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project.devmob.tripcount.ui.grouplist.AddGroupActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_group_title"
        android:textSize="20sp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/error_new_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:gravity="left"
        android:visibility="gone" />

    <EditText
        android:id="@+id/new_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_group_hint"/>

    <Button
        android:id="@+id/button_add_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_group_button"
        android:onClick="addNewGroup"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_token_title"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/error_add_group_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:gravity="left"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/add_token_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_token_hint"/>

    <Button
        android:id="@+id/button_add_token_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_token_button"
        android:onClick="joinGroup"/>
</LinearLayout>
