<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.group.AddSpendingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_spending_name_title"
            android:gravity="left"
            android:textSize="20sp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/add_spending_error_no_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:gravity="left"
            android:visibility="gone" />

        <EditText
            android:id="@+id/new_spending_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_spending_name_hint"
            android:layout_marginBottom="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_spending_cost_title"
            android:gravity="left"
            android:textSize="20sp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/add_spending_error_no_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:gravity="left"
            android:visibility="gone" />

        <EditText
            android:id="@+id/new_spending_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_spending_cost_hint"
            android:layout_marginBottom="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_spending_payer_title"
            android:gravity="left"
            android:textSize="20sp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/add_spending_error_no_payer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:gravity="left"
            android:visibility="gone" />

        <EditText
            android:id="@+id/new_spending_payer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_spending_payer_hint"
            android:layout_marginBottom="30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/add_spending_participant_list_title"
                android:gravity="left"
                android:textSize="20sp"
                android:paddingBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/new_participant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_new_participant_hint"
                    android:layout_marginBottom="30sp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_participant_button"
                    android:onClick="addParticipantToListView"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/add_spending_error_no_participant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:gravity="left"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearlayout_participants_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            </LinearLayout>

        <Button
            android:id="@+id/button_add_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_spending_button"
            android:onClick="addNewSpending"/>


    </LinearLayout>
</ScrollView>
